# AiCheckSecCode

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  vercel.json
.github/workflows/: ci.yml
api/: app.py  index.py  requirements.txt
src/aicheckseccode/: __init__.py  auditor.py  cli.py  crawler.py  excel.py  formatters.py  git.py  integrations.py  models.py  rules.py  web.py
tests/: test_audit.py  test_auditor.py
