[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aicheckseccode"
version = "0.2.0"
description = "Crawler CLI that audits Git repositories for security and hygiene quality signals."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "AiCheckSecCode"}]
keywords = ["security", "hygiene", "crawler", "git", "static-analysis"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
aicheckseccode = "aicheckseccode.cli:main"
aicheckseccode-web = "aicheckseccode.web:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
web = ["flask>=3.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
